src/test/deca/context/invalid/bool_from_int.deca

// Description :
// Initialisation boolean avec int
//
// Resultats :
// Erreur contextuelle
// incompatibilité de type : boolean <- int
//

{
  boolean b = 1;
}